[gd_scene load_steps=15 format=3 uid="uid://cyhkdwpdoucj4"]

[ext_resource type="Script" path="res://Scenes/Characters/Player/Player.gd" id="1_wpn0a"]
[ext_resource type="PackedScene" uid="uid://ucrtypft0pgp" path="res://Assets/models/coconutCopter/Colored/Copter3.tscn" id="3_jjbi5"]
[ext_resource type="PackedScene" uid="uid://dfakv6xuxo5g2" path="res://Assets/models/coconutCopter/Colored/Copter4.tscn" id="4_facri"]
[ext_resource type="AudioStream" uid="uid://bgelewtm6n0el" path="res://Assets/Audio/SFX/pop_sfx.ogg" id="6_drprm"]
[ext_resource type="PackedScene" uid="uid://duf86d76qstre" path="res://Assets/models/coconutCopter/Colored/Copter1.tscn" id="7_7kfm1"]
[ext_resource type="AudioStream" uid="uid://dtttouqv81g88" path="res://Assets/Audio/SFX/collect_cion.ogg" id="10_qod2r"]
[ext_resource type="PackedScene" uid="uid://dvfvyrnjrqoa6" path="res://Assets/models/monkey/monkeyColor/monkey1.tscn" id="11_yosrj"]
[ext_resource type="PackedScene" uid="uid://baoi0va5rp77b" path="res://Assets/models/monkey/monkeyColor/monkey2.tscn" id="12_y3b6e"]

[sub_resource type="BoxShape3D" id="BoxShape3D_svd0i"]
size = Vector3(2.195, 1.89, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_22n62"]
size = Vector3(2.195, 2.31, 1)

[sub_resource type="Animation" id="Animation_r5ads"]
resource_name = "Flying"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Node3D/4:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [false, false, true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Node3D/3:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [false, true, false, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Node3D/Copter 1:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [true, false, false, false]
}

[sub_resource type="Animation" id="Animation_vcc4b"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Node3D/4:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Node3D/3:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Node3D/Copter 1:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ox2s3"]
_data = {
"Flying": SubResource("Animation_r5ads"),
"RESET": SubResource("Animation_vcc4b")
}

[sub_resource type="BoxShape3D" id="BoxShape3D_0n6ux"]
size = Vector3(1.13, 1.5, 1)

[node name="Player" type="CharacterBody3D"]
collision_mask = 102
script = ExtResource("1_wpn0a")
hp = 3

[node name="Node3D" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0556384, -0.636158, 0)

[node name="Copter 1" parent="Node3D" instance=ExtResource("7_7kfm1")]

[node name="3" parent="Node3D" instance=ExtResource("3_jjbi5")]

[node name="4" parent="Node3D" instance=ExtResource("4_facri")]
visible = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.269417, 0)
shape = SubResource("BoxShape3D_svd0i")

[node name="Shoot Location" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.655838, -1.65178, -0.105924)

[node name="Hitbox" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.213129, 0.118322, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Hitbox"]
transform = Transform3D(1.2, 0, 0, 0, 1.2, 0, 0, 0, 1.2, 0, -0.261478, 0)
shape = SubResource("BoxShape3D_22n62")

[node name="Shooting Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Invulnerablility Timer" type="Timer" parent="."]
one_shot = true

[node name="Can Move Timer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="Floaty Timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="Shoot SFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_drprm")
volume_db = -10.0
bus = &"SFX"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ox2s3")
}
autoplay = "Flying"

[node name="Collect Coin" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("10_qod2r")
volume_db = -2.0
bus = &"SFX"

[node name="Top Monkey" parent="." instance=ExtResource("11_yosrj")]
transform = Transform3D(10.8265, 0, -5.17558, 0, 12, 0, 5.17558, 0, 10.8265, 0.00261589, -1.01553, -0.0408762)

[node name="Bottom Monkey" parent="." instance=ExtResource("12_y3b6e")]
transform = Transform3D(13, 0, 0, 0, 13, 0, 0, 0, 13, 0.0120464, -1.88338, -0.109294)

[node name="Monkey Hitbox" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Monkey Hitbox"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.273564, -1.23376, 0)
shape = SubResource("BoxShape3D_0n6ux")

[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="timeout" from="Shooting Timer" to="." method="_on_shooting_timer_timeout"]
[connection signal="timeout" from="Invulnerablility Timer" to="." method="_on_invulnerablility_timer_timeout"]
[connection signal="timeout" from="Can Move Timer" to="." method="_on_can_move_timer_timeout"]
[connection signal="area_entered" from="Monkey Hitbox" to="." method="_on_monkey_hitbox_area_entered"]
